--- a/themes/socialasset/user-campaign-page.html
+++ b/themes/socialasset/user-campaign-page.html
@@ -255,6 +255,306 @@
 </section>
 
 
+
+<section class="user-rel-camp-sec">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="user-rel-camp-innr">
+          <div class="user-rel-camp-head text-center">
+            <h4>Relevant Campaigns</h4>
+            <p>You may also be interested in</p>
+          </div>
+
+          <div class="upcoming-campaigns-main">
+            <div class="user-campaign-list-cntlr">
+              <ul class=" ulc clearfix">
+                <li class="campaigns-list-item-wrp">
+                  <div class="campaigns-list-item">
+                    <div class="campaigns-item-img" style="background: url(assets/images/user-campaign-list-img-02.png);"></div>
+                    <div class="campaigns-item-des">
+                      <div class="campaigns-item-des-inr">
+                        <div class="campaigns-item-cat-name">
+                          <strong>environment</strong>
+                          <span>
+                            <i class="far fa-heart"></i>
+                          </span>
+                        </div>
+                        <div class="campaigns-item-des-btm">
+                          <div>
+                            <h6>Salamamina - Oil Spoil</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac massa.</p>
+                          </div>
+                          <div class="campaigns-vote-info">
+                            <div class="campaigns-vote-percentage-bar clearfix">
+                              <div class="campaigns-vote-percentage-number"><span>30%</span></div>
+                              <div class="campaigns-vote-percentage">
+                                <div>
+                                  <span style="width: 30%"></span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="months-left">
+                              <i class="far fa-clock"></i>
+                              <span>3 months left</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="campaigns-list-item-des-hover">
+                      <div class="campaigns-list-item-des-hover-inr">
+                        <a class="overlay-link" href="#"></a>
+                        <div class="campaigns-item-cat-name">
+                          <strong>environment</strong>
+                          <span>
+                            <i class="far fa-heart"></i>
+                          </span>
+                        </div>
+                        <div class="campaigns-list-item-des-hover-des">
+                          <h6>Salamamina - Oil Spoil </h6>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit a met, consectetur adip iscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        </div>
+                        <div class="campaigns-vote-percentage-hover-bar">
+                          <div class="campaigns-vote-info">
+                            <div class="campaigns-vote-percentage-bar clearfix">
+                              <div class="campaigns-vote-percentage-number"><span>30%</span></div>
+                              <div class="campaigns-vote-percentage">
+                                <div>
+                                  <span style="width: 30%"></span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="months-left">
+                              <i class="far fa-clock"></i>
+                              <span>3 months left</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="campaigns-list-item-wrp">
+                  <div class="campaigns-list-item">
+                    <div class="campaigns-item-img" style="background: url(assets/images/user-rel-camp-2.jpg);"></div>
+                    <div class="campaigns-item-des">
+                      <div class="campaigns-item-des-inr">
+                        <div class="campaigns-item-cat-name">
+                          <strong>environment</strong>
+                          <span>
+                            <i class="far fa-heart"></i>
+                          </span>
+                        </div>
+                        <div class="campaigns-item-des-btm">
+                          <div>
+                            <h6>Clean South Crete</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac massa.</p>
+                          </div>
+                          <div class="campaigns-vote-info">
+                            <div class="campaigns-vote-percentage-bar clearfix">
+                              <div class="campaigns-vote-percentage-number"><span>30%</span></div>
+                              <div class="campaigns-vote-percentage">
+                                <div>
+                                  <span style="width: 30%"></span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="months-left">
+                              <i class="far fa-clock"></i>
+                              <span>3 months left</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="campaigns-list-item-des-hover">
+                      <div class="campaigns-list-item-des-hover-inr">
+                        <a class="overlay-link" href="#"></a>
+                        <div class="campaigns-item-cat-name">
+                          <strong>environment</strong>
+                          <span>
+                            <i class="far fa-heart"></i>
+                          </span>
+                        </div>
+                        <div class="campaigns-list-item-des-hover-des">
+                          <h6>Clean South Crete</h6>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit a met, consectetur adip iscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        </div>
+                        <div class="campaigns-vote-percentage-hover-bar">
+                          <div class="campaigns-vote-info">
+                            <div class="campaigns-vote-percentage-bar clearfix">
+                              <div class="campaigns-vote-percentage-number"><span>30%</span></div>
+                              <div class="campaigns-vote-percentage">
+                                <div>
+                                  <span style="width: 30%"></span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="months-left">
+                              <i class="far fa-clock"></i>
+                              <span>3 months left</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="campaigns-list-item-wrp">
+                  <div class="campaigns-list-item">
+                    <div class="campaigns-item-img" style="background: url(assets/images/user-rel-camp-3.jpg);"></div>
+                    <div class="campaigns-item-des">
+                      <div class="campaigns-item-des-inr">
+                        <div class="campaigns-item-cat-name">
+                          <strong>environment</strong>
+                          <span>
+                            <i class="far fa-heart"></i>
+                          </span>
+                        </div>
+                        <div class="campaigns-item-des-btm">
+                          <div>
+                            <h6>Τree planting - Athens</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac massa.</p>
+                          </div>
+                          <div class="campaigns-vote-info">
+                            <div class="campaigns-vote-percentage-bar clearfix">
+                              <div class="campaigns-vote-percentage-number"><span>30%</span></div>
+                              <div class="campaigns-vote-percentage">
+                                <div>
+                                  <span style="width: 30%"></span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="months-left">
+                              <i class="far fa-clock"></i>
+                              <span>3 months left</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="campaigns-list-item-des-hover">
+                      <div class="campaigns-list-item-des-hover-inr">
+                        <a class="overlay-link" href="#"></a>
+                        <div class="campaigns-item-cat-name">
+                          <strong>environment</strong>
+                          <span>
+                            <i class="far fa-heart"></i>
+                          </span>
+                        </div>
+                        <div class="campaigns-list-item-des-hover-des">
+                          <h6>Τree planting - Athens</h6>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit a met, consectetur adip iscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        </div>
+                        <div class="campaigns-vote-percentage-hover-bar">
+                          <div class="campaigns-vote-info">
+                            <div class="campaigns-vote-percentage-bar clearfix">
+                              <div class="campaigns-vote-percentage-number"><span>30%</span></div>
+                              <div class="campaigns-vote-percentage">
+                                <div>
+                                  <span style="width: 30%"></span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="months-left">
+                              <i class="far fa-clock"></i>
+                              <span>3 months left</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+                </li>
+                <li class="campaigns-list-item-wrp">
+                  <div class="campaigns-list-item">
+                    <div class="campaigns-item-img" style="background: url(assets/images/user-rel-camp-4.jpg);"></div>
+                    <div class="campaigns-item-des">
+                      <div class="campaigns-item-des-inr">
+                        <div class="campaigns-item-cat-name">
+                          <strong>environment</strong>
+                          <span>
+                            <i class="far fa-heart"></i>
+                          </span>
+                        </div>
+                        <div class="campaigns-item-des-btm">
+                          <div>
+                            <h6>Clean South Crete</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac massa.</p>
+                          </div>
+                          <div class="campaigns-vote-info">
+                            <div class="campaigns-vote-percentage-bar clearfix">
+                              <div class="campaigns-vote-percentage-number"><span>30%</span></div>
+                              <div class="campaigns-vote-percentage">
+                                <div>
+                                  <span style="width: 30%"></span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="months-left">
+                              <i class="far fa-clock"></i>
+                              <span>3 months left</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="campaigns-list-item-des-hover">
+                      <div class="campaigns-list-item-des-hover-inr">
+                        <a class="overlay-link" href="#"></a>
+                        <div class="campaigns-item-cat-name">
+                          <strong>environment</strong>
+                          <span>
+                            <i class="far fa-heart"></i>
+                          </span>
+                        </div>
+                        <div class="campaigns-list-item-des-hover-des">
+                          <h6>Clean South Crete</h6>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit a met, consectetur adip iscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        </div>
+                        <div class="campaigns-vote-percentage-hover-bar">
+                          <div class="campaigns-vote-info">
+                            <div class="campaigns-vote-percentage-bar clearfix">
+                              <div class="campaigns-vote-percentage-number"><span>30%</span></div>
+                              <div class="campaigns-vote-percentage">
+                                <div>
+                                  <span style="width: 30%"></span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="months-left">
+                              <i class="far fa-clock"></i>
+                              <span>3 months left</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+                </li>
+
+
+
+
+              </ul>
+              <div class="show-more-btn">
+                <a href="#">EXPLORE ALL CAMPAIGNS</a>
+              </div>
+            </div>
+          </div>          
+        </div>  
+      </div>
+    </div>
+  </div>     
+</section>
+
+
+
 <footer class="footer-wrp">
   <div class="ftr-main">
     <div class="container-lg">
