--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -971,9 +971,11 @@
             <li>
               <div class="hm-explore-campaigns-con">
                 <div class="hm-explore-campaigns-con-bg" style="background: url(assets/images/m-explore-campaigns-bg-1.png)"></div>
-                <div class="hm-explore-campaigns-des">
-                  <strong>Environment <br>Campaigns</strong>
-                  <span>12 opened</span>
+                <div class="hm-explore-campaigns-des-wrp">
+                  <div class="hm-explore-campaigns-des">
+                    <strong>Environment <br>Campaigns</strong>
+                    <span>12 opened</span>
+                  </div>                  
                 </div>
                 <a class="overlay-link" href="#"></a>
               </div>
@@ -981,9 +983,11 @@
             <li>
               <div class="hm-explore-campaigns-con">
                 <div class="hm-explore-campaigns-con-bg" style="background: url(assets/images/m-explore-campaigns-bg-2.png)"></div>
-                <div class="hm-explore-campaigns-des">
-                  <strong>Animal Planet <br>Campaigns</strong>
-                  <span>6 opened</span>
+                <div class="hm-explore-campaigns-des-wrp">
+                  <div class="hm-explore-campaigns-des">
+                    <strong>Animal Planet <br>Campaigns</strong>
+                    <span>6 opened</span>
+                  </div>
                 </div>
                 <a class="overlay-link" href="#"></a>
               </div>
@@ -991,9 +995,11 @@
             <li>
               <div class="hm-explore-campaigns-con">
                 <div class="hm-explore-campaigns-con-bg" style="background: url(assets/images/m-explore-campaigns-bg-3.png)"></div>
-                <div class="hm-explore-campaigns-des">
-                  <strong>Human <br>Campaigns</strong>
-                  <span>32 opened</span>
+                <div class="hm-explore-campaigns-des-wrp">
+                  <div class="hm-explore-campaigns-des">
+                    <strong>Human <br>Campaigns</strong>
+                    <span>32 opened</span>
+                  </div>
                 </div>
                 <a class="overlay-link" href="#"></a>
               </div>
@@ -1001,9 +1007,11 @@
             <li class="w-50">
               <div class="hm-explore-campaigns-con">
                 <div class="hm-explore-campaigns-con-bg" style="background: url(assets/images/m-explore-campaigns-bg-4.png)"></div>
-                <div class="hm-explore-campaigns-des">
-                  <strong>Health <br>Campaigns</strong>
-                  <span>12 opened</span>
+                <div class="hm-explore-campaigns-des-wrp">
+                  <div class="hm-explore-campaigns-des">
+                    <strong>Health <br>Campaigns</strong>
+                    <span>12 opened</span>
+                  </div>
                 </div>
                 <a class="overlay-link" href="#"></a>
               </div>
@@ -1011,9 +1019,11 @@
             <li class="w-50">
               <div class="hm-explore-campaigns-con">
                 <div class="hm-explore-campaigns-con-bg" style="background: url(assets/images/m-explore-campaigns-bg-5.png)"></div>
-                <div class="hm-explore-campaigns-des">
-                  <strong>Education <br>Campaigns</strong>
-                  <span>No opened yet</span>
+                <div class="hm-explore-campaigns-des-wrp">
+                  <div class="hm-explore-campaigns-des">
+                    <strong>Education <br>Campaigns</strong>
+                    <span>No opened yet</span>
+                  </div>
                 </div>
                 <a class="overlay-link" href="#"></a>
               </div>
