home page fixing

--- a/themes/socialasset/home.html
+++ b/themes/socialasset/home.html
@@ -410,7 +410,7 @@
 </section><!-- end of sa-user-section -->
 
 
-<section class="sa-campaign-upcoming-section" style="background: url('assets/images/sa-campaign-upcoming-sec-bg.png'); min-height: 1377px;">
+<section class="sa-campaign-upcoming-section" style="background: url('assets/images/sa-campaign-upcoming-sec-bg.png');">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
