--- a/themes/socialasset/index.html
+++ b/themes/socialasset/index.html
@@ -32,7 +32,7 @@
 
 </head>
 <body>
-<header class="header hdr-has-shadow">
+<header class="header has-shadow">
   <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
@@ -45,7 +45,7 @@
             <!-- 
               If you want logged navbar. please use the class on '.hdr-rgt .logged-menu'
              -->
-            <div class="hdr-rgt logged-menu">
+            <div class="hdr-rgt">
               <nav class="main-nav logout-main-nav">
                 <div class="main-nav-menu">
                   <ul class="clearfix ulc">
@@ -97,8 +97,7 @@
                     </li>
                   </ul>
                 </div>
-              </nav>
-              
+              </nav>              
               <div class="humberger-menu-btn">
                 <strong>MENU</strong>
                 <div class="humberger-menu-btn-lines">
@@ -106,10 +105,9 @@
                   <span></span>
                   <span></span>
                 </div>
-              </div>
-              
+              </div>              
             </div>
-            <div class="humberger-menu">
+            <div class="humberger-menu humberger-menu-xlg">
               <ul class="clearfix ulc">
                 <li><a href="#">Humanity</a></li>
                 <li><a href="#">Animals</a></li>
@@ -133,6 +131,81 @@
                 </div>
               </div>
             </div>
+
+
+            <!-- 
+              If you want logged navbar. please use the class on '.humberger-menu .humberger-menu-xs  .logged-menu'
+             -->
+            <div class="humberger-menu humberger-menu-xs logged-menu clearfix">
+              <div class="humberger-menu-items clearfix">
+                <ul class="clearfix ulc xs-logout-inner-menu">
+                  <li><a href="#">For NGOs</a></li>
+                  <li class="menu-item-has-children">
+                    <a href="#">For Businesses</a>
+                    <ul class="sub-menu">
+                      <li><a href="#">sub menu item</a></li>
+                      <li><a href="#">sub menu item</a></li>
+                      <li><a href="#">sub menu item</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Campaigns</a></li>
+                </ul>
+                <ul class="clearfix ulc xs-logged-inner-menu">
+                  <li><a href="#">How it Works</a></li>
+                  <li><a href="#">Support a Campaign</a></li>
+                </ul>
+                <ul class="clearfix ulc">
+                  <li><a href="#">Humanity</a></li>
+                  <li><a href="#">Animals</a></li>
+                  <li><a href="#">Environment</a></li>
+                  <li><a href="#">Health</a></li>
+                  <li><a href="#">Education</a></li>
+                </ul>
+                <ul class="clearfix ulc">
+                  <li><a href="#">What We Do</a></li>
+                  <li><a href="#">FAQ</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </div>
+              <div class="xs-menu-footer clearfix">
+                <div class="xs-login-area">
+                  <h6>Login</h6>
+                  <div>
+                    <a href="#">For <strong>NGOs</strong></a>
+                    <a href="#">For <strong>USERs</strong></a>
+                  </div>
+                </div>
+                <div class="xs-hdr-login-profile">
+                  <div class="hdr-login-profile">
+                    <div>
+                      <div class="hdr-login-profile-img">
+                        <img src="assets/images/hdr-login-profile-img.png">
+                      </div>
+                      <strong>Georgio</strong>
+                    </div>
+                    <ul class="ulc clearfix">
+                      <li><a href="#">My Contributions</a></li>
+                      <li><a href="#">My Profile</a></li>
+                      <li>
+                        <i class="fas fa-sign-out-alt"></i>
+                        <a href="#">Log out</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="languages-area">
+                  <label>Languages:</label>
+                  <div class="site-lang-holder clearfix">
+                    <div class="site-lang">
+                      <a href="#" class="active">En <span class="ede-down-angle"></span></a>
+                      <a href="#">Gr</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
@@ -169,7 +242,6 @@
               <li><a href="what-we-do.html" target="_blank">what we do</a></li>             
               <li><a href="a_modal.html" target="_blank">modal</a></li>
               <li><a href="a_login-register.html" target="_blank">login register</a></li>
-              <li><a href="a_business-profile.html" target="_blank">business profile</a></li>
               <li><a href="b_user-profile-02-contributions.html" target="_blank">user profile</a></li>
               <li><a href="b_ngo-profile-01-my-account.html" target="_blank">ngo profile</a></li>
               <li><a href="b_business-profile-01-my-account.html" target="_blank">businesses profile</a></li>
@@ -192,10 +264,6 @@
 
 <!-- -- Gap markup--- -->
 <div class="gap" data-value='100' data-md='50' data-xs='40' data-sm='30' data-xxs='20'></div>
-<div class="margin" data-value='100'></div>
-<div class="padding" data-value='100'></div>
-<div class="margin" data-value='100'></div>
-<div class="padding" data-value='100'></div>
 
 
 <footer class="footer-wrp">
