forgot btn actions

--- a/themes/socialasset/b_user-profile-01-my-account.html
+++ b/themes/socialasset/b_user-profile-01-my-account.html
@@ -216,12 +216,22 @@
                             </div>
                           </div>
                           <div class="fl-forget-row prib-plr">
-                            <a href="#">Forgot your password?</a>
+                            <a class="fl-forget-pass-btn" href="#">Forgot your password?</a>
                           </div>
-                          <div class="prib-plr">
+                          <div class="prib-plr forgot-pass-field-before">
                             <div class="prib-btns profile-submit-btn clearfix">
                               <input type="submit" name="" value="Change Password">
                               <input type="reset" name="" value="Cancel">
+                            </div>
+                          </div>
+                          <div class="prib-plr forgot-pass-field-after">
+                            <div class="prib-btns">
+                              <div class="sa-input">
+                                <input type="email" name="" placeholder="Enter your email">
+                              </div>
+                              <div class="profile-submit-btn clearfix">
+                                <input type="submit" name="" value="Send">
+                              </div>
                             </div>
                           </div>
                           <hr>
