--- a/themes/socialasset/a_login-businesses.html
+++ b/themes/socialasset/a_login-businesses.html
@@ -185,10 +185,18 @@
                           <input type="password" name="" placeholder="Password">
                         </div>
                         <div class="fl-forget-row">
-                          <a href="#">Forgot your password?</a>
+                          <a class="fl-forget-pass-btn" href="#">Forgot your password?</a>
                         </div>
-                        <div class="fl-submit-btn w-full">
+                        <div class="fl-submit-btn w-full forgot-pass-field-before">
                           <input type="submit" value="Sign In">
+                        </div>
+                        <div class="forgot-pass-field-after">
+                          <div class="sa-input">
+                            <input type="email" name="" placeholder="Enter your email">
+                          </div>
+                          <div class="profile-submit-btn clearfix">
+                            <input type="submit" name="" value="Send">
+                          </div>
                         </div>
                         <div class="fl-or-text">
                           <span>Or</span>
