--- a/themes/socialasset/user-campaign-page.html
+++ b/themes/socialasset/user-campaign-page.html
@@ -177,7 +177,7 @@
               </span>
             </div>
           </div>
-          <div class="miracle-plan-des-wrp">
+          <div class="miracle-plan-des-wrp" id="sidebar2">
             <div class="miracle-plan-des-innr">
               <span class="human-tag">Human</span>
               <h3>The miracle recovery plan for our planet</h3>
