--- a/themes/socialasset/a_modal.html
+++ b/themes/socialasset/a_modal.html
@@ -42,7 +42,7 @@
         <div class="text-center">
           <a id="quickViewOpener" href="#" class="btn btn-primary" data-toggle="modal" data-target="#quickViewModal">User – campaign page – popup-personal details</a>
           <div style="height: 20px;"></div>
-          <a id="loginRegisterOpener" href="#" class="btn btn-primary" data-toggle="modal" data-target="#loginRegisterModal">Login Reginster popup</a>
+          <a id="loginRegisterOpener" href="#" class="btn btn-primary" data-toggle="modal" data-target="#loginRegisterModal">Login Register popup</a>
         </div>
       </div>
     </div>
